--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body {
 #header div{
   display: table-cell;
   vertical-align: middle;
-  background-color: #525E4E;
+  background-color: #e4eff1;
   text-align: center;
-  opacity: 0.9;
+  opacity: 0.5;
 }
 #header h1{
   font-family: monospace;
   font-size: 50px;
-  color: #fff;
+  color: #929090;
   border: 1px solid white;
   margin-left: 100px;
   margin-right: 100px;
